Bug 1866161 - Stop propagating directionality earlier. r=smaug

If the element already has the right directionality we don't need to
traverse the whole subtree.

Clean-up surrounding code a little bit while at it.

Differential Revision: https://phabricator.services.mozilla.com/D194503